Refactor tests, remove text blocks